Refactor updateClaims() into smaller methods